[gd_scene load_steps=3 format=2]

[ext_resource path="res://Instances/Dibujo.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 511.5, 228 )

[node name="Dibujo" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Dibujar" type="Button" parent="."]
margin_left = 328.0
margin_top = 552.0
margin_right = 400.15
margin_bottom = 579.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Dibujar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deshacer" type="Button" parent="."]
margin_left = 568.0
margin_top = 552.0
margin_right = 640.15
margin_bottom = 579.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Deshacer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Limpiar" type="Button" parent="."]
margin_left = 448.0
margin_top = 552.0
margin_right = 520.15
margin_bottom = 579.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Limpiar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 512.5, 228 )
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="."]

[connection signal="pressed" from="Dibujar" to="." method="_on_Dibujar_pressed"]
[connection signal="pressed" from="Deshacer" to="." method="_on_Deshacer_pressed"]
[connection signal="pressed" from="Limpiar" to="." method="_on_Limpiar_pressed"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
